--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -18,6 +18,9 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - run: npm install -g codecov
+      - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+      - codecov
 
   publish-npm:
     needs: build
