Bug fixes and new features
Bug: Caused by a type
Feature: Added toString() method which can be configured using color 
channels.

- Added .npmignore file and specified the files in package.json to 
simplify the module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "colorlab-js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A javascript library which could do many color manipulations",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,13 @@
   "directories": {
     "test": "test"
   },
+  "files": [
+    "index.js",
+    "LICENSE",
+    "README.md",
+    "package.json",
+    "package-lock.json"
+  ],
   "dependencies": {},
   "repository": {
     "type": "git",
