Updated package configurations

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "test:coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "coverage": "istanbul cover _mocha -x test/*",
-    "build": "npm test & npm link & npm pack"
+    "build": "npm test & npm link & npm pack & npm version patch"
   },
   "keywords": [
     "color",
@@ -19,7 +19,7 @@
   "devDependencies": {
     "coveralls": "^3.0.6",
     "istanbul": "^0.4.5",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.1"
   },
   "directories": {
     "test": "test"
