--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,15 +17,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-        run: |
-          npm ci
-          npm run test:coveralls
+      - run: npm ci
+      - run: npm run test:coveralls
 
   publish:
      name: Publish
      needs: build
      runs-on: ubunutu-latest
      steps:
-       run: |
-         npm login --registry=https://npm.pkg.github.com/
-         npm publish
+       - run: npm login --registry=https://npm.pkg.github.com/
+       - run: npm publish
