--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,11 +24,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run:  git config --global user.email "senirupasan@gmail.com"
-      - run: git config --global user.name "Seniru"
-
       - run: npm ci
       - run: npm version patch
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+          GITHUB_TOEKN: ${{secrets.GITHUB_TOKEN}}
