--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "test:coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "coverage": "istanbul cover _mocha -x test/*",
-    "build": "npm test & npm link & npm pack & npm version patch"
+    "build": "npm run test:coveralls & npm link & & npm version patch"
   },
   "keywords": [
     "color",
