--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run test:coveralls
+      - run: npm run build
       
