--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   build:
     name: build
+    env:
+      CODECOV_TOKEN: c7bb51f7-780a-4d1a-b2b2-44c992d4b783
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -19,4 +21,4 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
-      
+  
