--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test:codecov": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec ./node_modules/.bin/codecov",
+    "test:codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codecov",
     "coverage": "istanbul cover _mocha -x test/*",
-    "build": "npm run test:codecov & npm link"
+    "build": "npm run test:coveralls & npm link"
   },
   "keywords": [
     "color",
