Fixed repo token

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test:codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codecov -t :c7bb51f7-780a-4d1a-b2b2-44c992d4b783",
+    "test:codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codecov -t c7bb51f7-780a-4d1a-b2b2-44c992d4b783",
     "coverage": "istanbul cover _mocha -x test/*",
     "build": "npm run test:codecov & npm link"
   },
